[gd_scene load_steps=5 format=3 uid="uid://ck7j4eam2h6n8"]

[ext_resource type="Texture2D" uid="uid://cp6h0easasnmc" path="res://gui/Update/UI/ui 6.png" id="2_j3jpk"]
[ext_resource type="Script" uid="uid://0gkfgjdix8tw" path="res://Scripts/ReadAloudModule.gd" id="2_script"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="3_regular_font"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="4_bold_font"]

[node name="ReadAloudModule" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j3jpk")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_regular_font")
text = "‚Üê Back to Modules"
flat = true

[node name="TitleLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bold_font")
text = "üìñ Interactive Read-Aloud"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentPanel" type="Panel" parent="MainContainer/CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="MainContainer/CenterContainer/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModuleTitle" type="Label" parent="MainContainer/CenterContainer/ContentPanel/ContentContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bold_font")
text = "Welcome to Interactive Read-Aloud!"
horizontal_alignment = 1

[node name="Description" type="Label" parent="MainContainer/CenterContainer/ContentPanel/ContentContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular_font")
text = "Follow along with highlighted text and audio narration. Practice your reading comprehension and fluency skills."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ComingSoonLabel" type="Label" parent="MainContainer/CenterContainer/ContentPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_regular_font")
text = "üöß This module is under development üöß

For now, you can practice with the Word Challenge interface!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/CenterContainer/ContentPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="STTButton" type="Button" parent="MainContainer/CenterContainer/ContentPanel/ContentContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_bold_font")
text = "Word Challenge (STT)"

[node name="BackButton2" type="Button" parent="MainContainer/CenterContainer/ContentPanel/ContentContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_regular_font")
text = "Back to Modules"

[connection signal="pressed" from="MainContainer/HeaderContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainContainer/CenterContainer/ContentPanel/ContentContainer/ButtonContainer/STTButton" to="." method="_on_stt_button_pressed"]
[connection signal="pressed" from="MainContainer/CenterContainer/ContentPanel/ContentContainer/ButtonContainer/BackButton2" to="." method="_on_back_button_pressed"]
